<resources>
    <string name="app_name">Done</string>
    <string name="tour_one_description"><![CDATA[The number one app for Home Repairing, Electronics, Car Repair & more - just a tap away]]></string>
    <string name="_250_services">250+ Services</string>
    <string name="qualified_verified_professionals"><![CDATA[Qualified & Verified Professionals]]></string>
    <string name="tour_two_description">DONE Heroes are fully trained and always ready to make your life easier</string>
    <string name="unmatched_quality_prices"><![CDATA[Unmatched Quality & Prices]]></string>
    <string name="get_started">Get Started</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic (عربي)</string>
    <string name="continue_as">Continue as</string>
    <string name="customer">Customer</string>
    <string name="provider">Service Provider</string>
    <string name="create_an_account">Create an Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="_966_999_999_999">999-999-999</string>
    <string name="login_to">Login to your account</string>
    <string name="enter_four_digit">Enter your 4 digit pin to proceed</string>
    <string name="login_btn_txt">Login</string>
    <string name="forget_pin_txt">Forgot Your Pin?</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_with_different">Login with different account instead</string>
    <string name="do_not_have">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_different_account_txt">Logging in with different account?</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="enter_pin_txt">Enter 4 digit pin</string>
    <string name="a_four_digit_code_has_been_sent_to_your_entered_mobile_number_for_verification_process">A four digit code has been sent to your\nentered mobile number for verification process</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="e_g_john_doe">e.g John Doe</string>
    <string name="e_g_johndoe_gmail_com">e.g. johndoe@gmail.com</string>
    <string name="create_4_digit_pin">Create 4 digit pin</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_pin_no_worries">Forgot Pin? No Worries</string>
    <string name="create_new_pin">Create New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="update_pin_btn_txt">Update Pin</string>
    <string name="hello">Hello,</string>
    <string name="guest">Guest</string>
    <string name="hello_guest">Hello Guest!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="done_copyrights">DONE Copyrights Ltd. @ 2022</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="search_location">Search Location</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="no_saved_locations">No Saved Locations</string>
    <string name="add_location">Add location</string>
    <string name="around_you">Around You</string>
    <string name="view_map">View Map</string>
    <string name="login_signup_txt">Login / SignUp to your account</string>
    <string name="google_key" translatable="false">AIzaSyDcQMzx_8YWy2DD-kgcoYlu0efsJOo2VM4</string>
    <string name="add_a_new_address">Add a new Address</string>
    <string name="update_new_address">Update new Address</string>
    <string name="we_re_missing_your_street">We\'re missing your street</string>
    <string name="street">Street</string>
    <string name="floor_unit">Floor / Unit #</string>
    <string name="note_to_provider_optional">Note to provider (Optional)</string>
    <string name="add_a_label">Add a Label</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="e_g_my_second_home">e.g. My Second Home</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="look_for_services">Look For Services</string>
    <string name="select_your_category">Select your Category</string>
    <string name="home">Home</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="choose_your_service_type">Choose your Service Type</string>
   <string name="description">Description</string>
    <string name="detail_service">Detailed Services</string>
    <string name="search_for_keywords">Search for keywords</string>
    <string name="choose_service_type">Choose Service Type</string>
    <string name="service_at_home">Service at Home</string>
    <string name="collect_return">Collect &amp; Return</string>
    <string name="type_of_cleaning">Type Of Cleaning</string>
    <string name="choose_the_options">Choose the Option</string>
    <string name="add_description">Add Description</string>
    <string name="tell_some_thing">Tell something about your problem</string>
    <string name="image_upload">Upload images</string>
    <string name="upload_maximum">Upload Maximum 06 images</string>
    <string name="upload_max_size">Max Image Size: 2 MB</string>
    <string-array name="question_array">
        <item>Choose the Option</item>
        <item>Gree</item>
        <item>Gree</item>
        <item>Gree</item>
        <item>Gree</item>
        <item>Gree</item>
        <item>Gree</item>
    </string-array>
    <string name="using_original_confidential_tools_materials_specific_machines">Using original confidential tools, materials &amp; specific machines</string>
    <string name="kindly_wait_nwe_re_searching_the_best_providers_for_you">Kindly wait !\nWe’re searching the best Providers for you</string>
    <string name="create_your_new_pin">Create your new Pin</string>
    <string name="crn">CRN:</string>
    <string name="sub_services">Sub_Service:</string>
    <string name="about_provider">About Provider</string>
    <string name="services_selected">Services Selected</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="btn_reserve_slot">Reserve Slot</string>
    <string name="dumy_text">ABC Cleaners provides deep, detailed cleanings. From bathrooms to bedrooms, we will pay meticulous attention to every room in your house.</string>
    <string name="selected_services">Selected Services</string>
    <string name="add_new_service">Add New Service</string>
    <string name="home_cleaning_services">Home Cleaning Services</string>
    <string name="home_cleaning">Home Cleaning</string>
    <string name="small_villa_2_bedroom_3_baths_1_kitchen_1_drawing_room">Small Villa 2 Bedroom, 3 baths,\n1 Kitchen , 1 drawing room</string>
    <string name="sar_1000">SAR 1000</string>
    <string name="service_by_abc_cleaners">Service by ABC Cleaners</string>
    <string name="subtotal">Subtotal</string>
    <string name="vat_15">VAT (15%)</string>
    <string name="_150_00_sar">150.00 SAR</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="_100_00_sar">- 100.00 SAR</string>
    <string name="apply">Apply</string>
    <string name="total_amount">Total Amount</string>
    <string name="_1050_00_sar">1050.00 SAR</string>
    <string name="apply_a_coupon">Apply a Coupon</string>
    <string name="review_payment_checkout">Review Payment &amp; Checkout</string>
    <string name="your_location">Your Location</string>
    <string name="_167_h_king_abdul_aziz_road">167-H, King Abdul Aziz Road</string>
    <string name="note_to_provider">Note to provider</string>
    <string name="call_me_when_you_re_about_to_come">Call me when you’re about to come</string>
    <string name="payment_method">Payment Method</string>
    <string name="service_on_delivery">Service on Delivery</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="order_summary">Order Summary</string>
    <string name="coupon_discount_20">Coupon Discount (20%)</string>
    <string name="don123">DON123</string>
    <string name="coupon_discount_10">Coupon Discount (10%)</string>
    <string name="order_place">Place Order</string>
    <string name="your_order_has_been_placed_your_provider_will_soon_accept_your_order">Your order has been placed. Your Provider\nwill soon accept your order.</string>
    <string name="order_id">ORDER ID</string>
    <string name="don123456789"># DON123456789</string>
    <string name="view_all_orders">View All Orders</string>
    <string name="balance">Balance</string>
    <string name="sar_1080_00">SAR 1080.00</string>
    <string name="mon_may_26_2022">Mon, May 26, 2022</string>
    <string name="top_up">Top Up</string>
    <string name="sar_850">SAR 850</string>
    <string name="spent">SPENT</string>
    <string name="_20">20</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_accept">Accept</string>
    <string name="additional_invoice">Additional Invoice</string>
    <string name="service_by">Service by</string>
    <string name="report_problem">Report Problem</string>
    <string name="failed">Failed</string>
    <string name="view_invoice">View Invoice</string>
    <string name="completed">Completed</string>
    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="transactions_small">Transactions</string>
    <string name="view_all">View All</string>
    <string name="june">June</string>
    <string name="cleaning_dusting">Cleaning, Dusting</string>
    <string name="current_wallet_balance">Current Wallet Balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="sar">SAR</string>
    <string name="top_up_should_be_min_sar_200">Top Up should be min SAR 200</string>
    <string name="or_select_an_amount">Or Select an amount</string>
    <string name="_200">200</string>
    <string name="_500">500</string>
    <string name="_700">700</string>
    <string name="_1000">1000</string>
    <string name="_3000">3000</string>
    <string name="_5000">5000</string>
    <string name="add_funds_to_wallet">Add Funds to Wallet</string>
    <string name="confirm_payment_method">Confirm Payment Method</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="payment_methodes">Payment Method</string>
    <string name="continuees">Continue</string>
    <string name="vat">VAT</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_up_to_five_location">Add up-to maximum 5 addresses</string>
    <string name="note_provider">Note to provider:</string>
    <string name="call_me">Call me when you reach</string>
    <string name="login_pin">Login Pin</string>
    <string name="update_picture">Update Picture</string>
    <string name="save">Save</string>
    <string name="verify">Verify</string>
    <string name="confirm_your_email">Confirm your email address</string>
    <string name="confirm_mobile_num">Confirm your Mobile Number</string>
    <string name="change_pin">Change Pin</string>
    <string name="name_updated">Name Updated successfully</string>
    <string name="email_verification">Email verification</string>
    <string name="a_verification_email">A verification email has been sent to your email</string>
    <string name="kindly_check">. Kindly check your inbox</string>
    <string name="view_profile">View Profile</string>
</resources>