<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/current_wallet_balance"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_12ssp"
        app:customFont="poppins_semibold.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvYourBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/sar_1080_00"
        android:textColor="@color/blue"
        android:textSize="@dimen/_25ssp"
        app:customFont="poppins_semibold.ttf"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentBalance"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/top_up_line_color"
        app:layout_constraintTop_toBottomOf="@+id/tvYourBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/enter_amount"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_11ssp"
        app:customFont="poppins_semibold.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvEnterAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.dtech.done.doneapp.utilities.helper.TypeFaceEditText
                    android:id="@+id/edtEnterAmount"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvSAR"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/blue_text_color"
                    app:customFont="poppins_regular.ttf" />


                <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                    android:id="@+id/tvSAR"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/sar"
                    android:textColor="@color/radio_uncheck_color"
                    android:textSize="@dimen/_14ssp"
                    app:customFont="poppins_medium.ttf"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvTopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/top_up_should_be_min_sar_200"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_11ssp"
        app:customFont="poppins_regular.ttf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEnterAmount" />

    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvSelectAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/or_select_an_amount"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_12ssp"
        app:customFont="poppins_semibold.ttf"
        app:layout_constraintTop_toBottomOf="@+id/tvTopUp"
        app:layout_constraintStart_toStartOf="parent"
        />


    <LinearLayout
        android:id="@+id/llSelectPriceOne"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_4ssp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv200"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_200"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3ssp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv500"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_500"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3ssp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv700"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_700"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSelectPriceTwo"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/llSelectPriceOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_4ssp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv1000"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1000"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3ssp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv3000"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_3000"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_3ssp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:id="@+id/tv5000"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5000"
                android:gravity="center"
                android:textColor="@color/non_fill_tab"
                android:textSize="@dimen/_14ssp"
                app:customFont="poppins_medium.ttf"
                />



        </androidx.cardview.widget.CardView>



    </LinearLayout>


    <com.dtech.done.doneapp.utilities.helper.TypeFaceButton
        android:id="@+id/btnAddWallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_unselect_top_up_background"
        android:text="@string/add_funds_to_wallet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:customFont="poppins_medium.ttf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSelectPriceTwo" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>