<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_light_blue_gradient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_language_selection" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_130sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:customFont="poppins_semibold.ttf" />

            <com.dtech.done.doneapp.utilities.helper.TypeFaceButton
                android:id="@+id/btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/btn_rount_corner"
                android:backgroundTint="@color/white"
                android:text="@string/english"
                android:layout_marginTop="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textColor="@color/blue_button"
                android:textSize="@dimen/_12ssp"
                app:customFont="poppins_medium.ttf" />

            <com.dtech.done.doneapp.utilities.helper.TypeFaceButton
                android:id="@+id/btnArabic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/btn_rount_corner"
                android:backgroundTint="@color/white"
                android:text="@string/arabic"
                android:layout_marginTop="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textColor="@color/blue_button"
                android:textSize="@dimen/_12ssp"
                app:customFont="poppins_medium.ttf" />
        </LinearLayout>
    </RelativeLayout>
</layout>