<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/bg_round_light_blue_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/ivNotify"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/bg_profile_image_circle"
        android:src="@drawable/notify_email_confirmation"
        android:layout_marginTop="@dimen/_120sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvEmailVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/email_verification"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_30sdp"
        app:customFont="poppins_semibold.ttf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNotify"/>
    <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
        android:id="@+id/tvVerificationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/a_verification_email"
        android:textColor="@color/non_fill_tab"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_30sdp"
        app:customFont="poppins_regular.ttf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailVerify"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTextForNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerificationEmail">
        <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="johndoe@gmail.com"
            android:gravity="center"
            android:textColor="@color/non_fill_tab"
            android:textSize="@dimen/_10ssp"
            app:customFont="poppins_regular.ttf"/>
        <com.dtech.done.doneapp.utilities.helper.TypeFaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindly_check"
            android:textColor="@color/non_fill_tab"
            android:textSize="@dimen/_10ssp"
            app:customFont="poppins_regular.ttf"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.dtech.done.doneapp.utilities.helper.TypeFaceButton
        android:id="@+id/btnViewProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_rount_corner"
        android:text="@string/view_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:customFont="poppins_medium.ttf"
        app:layout_constraintTop_toBottomOf="@+id/llTextForNotify"
        app:layout_constraintStart_toStartOf ="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>